--- a/stylesheets/magazine.css
+++ b/stylesheets/magazine.css
@@ -1,6 +1,5 @@
 
 .container {
-    max-width: 855px;
     padding-top: 15px;
     margin: auto;
 
@@ -13,11 +12,11 @@
     padding: 5px;
 }
 
-.content ul li {
-    background: #eee;
-    margin-top: 5px;
-    border-radius: 5px;
-    width: 800px;
+.tabs {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
 }
 
 .tabs a span {
