--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -68,16 +68,14 @@ header a:hover{
 }
 
 .promos {
-    margin-left: 15%;
-    margin-right: 15%;
+    text-align: center;
     vertical-align: middle;
-    content: "";
 }
 
 .promo {
     display: inline-block;
     vertical-align: middle;
-    margin: 30px;
+    margin: 20px;
     padding: 10px;
 }
 
